add token type
